# greet_rs_flutter

./: README.md
greet_flutter/: .metadata  README.md  ffigen.yaml  pubspec.yaml
greet_flutter/example/: README.md  pubspec.yaml
greet_flutter/example/lib/: main.dart
greet_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
greet_flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
greet_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
greet_flutter/lib/: greet_flutter.dart  greet_flutter_bindings_generated.dart
greet_flutter/macos/: greet_flutter.podspec
greet_flutter/macos/Classes/: greet_flutter.c
greet_flutter/src/: CMakeLists.txt  greet_flutter.c
greet_rs/: Cargo.toml  cbindgen.toml  greet_rs_gen.h
greet_rs/src/: lib.rs
